syntax = "proto3";


package app;


service UrlController {
    rpc GetShortUrl (UrlHash) returns (Url){}

    rpc InsertUrl (OriginalUrl) returns (Url){}
}

message UrlHash {
    string urlHash = 1;
}

message UrlObject {
    string id = 1;
    string url = 2;
    string urlHash = 3;
    string shortUrl = 4;
}

message Url{
    UrlObject urlOb = 1;
}

message OriginalUrl{
    string originalUrl = 1;
}